testing test case features, Entity class not found error encountered

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,31 @@
 */config/development
+
 */logs/log-*.php
-!*/logs/index.html
+!
+*/logs/index.html
+
 */cache/*
+
 !*/cache/index.html
+
 !*/cache/.htaccess
 
-user_guide_src/build/*
-user_guide_src/cilexer/build/*
-user_guide_src/cilexer/dist/*
-user_guide_src/cilexer/pycilexer.egg-info/*
+user_guide_src/build/
+*
+user_guide_src/cilexer/build/
+*
+user_guide_src/cilexer/dist/
+*
+user_guide_src/cilexer/pycilexer.egg-info/
+*
+
+#codeigniter 3
+application/logs/
+*!application/logs/index.html
+!application/logs/.htaccess
+/vendor/
+/nbproject/private/
+/nbproject/
 
 #codeigniter 3
 application/logs/*
@@ -17,3 +34,5 @@ application/logs/*
 /vendor/
 /nbproject/private/
 /nbproject/
+composer.lock
+tests/build
